# playstation_controller_drivers

./: dependency.repos
.github/workflows/: ROS2-Dashing.yaml  ROS2-Foxy.yaml  ROS2-Galactic.yaml
playstation_controller_drivers/: CMakeLists.txt  package.xml
playstation_controller_drivers/config/: wamv_dualsense.yaml
playstation_controller_drivers/include/playstation_controller_drivers/: dualsense_driver_component.hpp  util.hpp  visibility_control.h
playstation_controller_drivers/launch/: teleop_wamv.launch.xml
playstation_controller_drivers/src/: dualsense_driver_component.cpp  dualsense_driver_node.cpp
sdl2_vendor/: CMakeLists.txt  package.xml
sdl2_vendor/cmake/Modules/: Findsdl2_custom.cmake
sdl2_vendor2/: CMakeLists.txt  package.xml  sdl2_vendor2-extras.cmake
